Added uk and ge stocks with backend

--- a/templates/market_news.html
+++ b/templates/market_news.html
@@ -48,6 +48,7 @@ content %}
   .news-content {
     display: -webkit-box;
     -webkit-line-clamp: 3;
+    line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
