--- a/templates/base.html
+++ b/templates/base.html
@@ -156,6 +156,13 @@
               <a class="nav-link" href="/ph_stocks">PH Stocks</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/uk_stocks">UK Stocks</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/ge_stocks">GE Stocks</a>
+            </li>
+
+            <li class="nav-item">
               <a class="nav-link" href="/sector_news">Sector News</a>
             </li>
             <!-- New Simulation Navbar Item -->
