test code for voice over if it works and if it does not voice over if in different website also change position of sector news

--- a/templates/current_affairs.html
+++ b/templates/current_affairs.html
@@ -1220,12 +1220,17 @@ block content %}
       announcementMade = false;
 
       // Start countdown interval
+      // Start countdown interval
       countdownInterval = setInterval(() => {
         secondsRemaining--;
 
         // When countdown reaches 0, make the voice announcement
         if (secondsRemaining <= 0) {
-          if (!announcementMade) {
+          if (
+            !announcementMade &&
+            document.visibilityState === "visible" &&
+            window.location.hostname === "insightedge.pro"
+          ) {
             announceRefresh();
             announcementMade = true;
           }
